--- a/client/package.json
+++ b/client/package.json
@@ -10,23 +10,24 @@
     "@material-ui/lab": "^4.0.0-alpha.30",
     "@material-ui/pickers": "^3.2.7",
     "@types/debounce": "^1.2.0",
+    "@types/draftjs-to-html": "^0.8.0",
     "@types/history": "^4.7.3",
+    "@types/html-to-draftjs": "^1.4.0",
     "@types/jest": "24.0.16",
     "@types/node": "12.6.9",
     "@types/pluralize": "0.0.29",
     "@types/react": "16.8.24",
     "@types/react-dom": "16.8.5",
+    "@types/react-draft-wysiwyg": "^1.13.0",
     "@types/react-image-crop": "^8.1.2",
     "@types/react-pdf": "^4.0.3",
     "@types/react-redux": "^7.1.5",
     "@types/react-router": "^5.1.2",
     "@types/react-router-dom": "^5.1.0",
+    "@types/react-select": "^3.0.8",
     "@types/redux-saga-routines": "^3.1.0",
-    "@types/yup": "^0.26.24",
     "@types/socket.io-client": "^1.4.32",
-    "@types/draftjs-to-html": "^0.8.0",
-    "@types/html-to-draftjs": "^1.4.0",
-    "@types/react-draft-wysiwyg": "^1.13.0",
+    "@types/yup": "^0.26.24",
     "acorn": "^7.1.0",
     "axios": "^0.19.0",
     "connected-react-router": "^6.5.2",
@@ -44,6 +45,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.0.1",
+    "react-select": "^3.0.8",
     "redux-saga": "^1.1.1",
     "redux-saga-routines": "^3.2.1",
     "typescript": "3.5.3"
